<?xml version="1.0"?>
<package format="3">
  <name>rm520n_multi_driver</name>
  <version>0.0.1</version>
  <description>RM520N-GL Multi Driver (GPS + Network Status)</description>

  <maintainer email="sylee@avgenius.kr">sylee</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tod_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rclcpp_components/>
  </export>
</package>
